<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Card Game Engine</string>
    <string name="spades">Spades</string>
    <string name="hearts">Hearts</string>
    <string name="clubs">Clubs</string>
    <string name="diamonds">Diamonds</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to the Skeleton, the game!  This is network-only, so you&amp;apos;ll need to log in to play!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="game_info">Game Info</string>
    <string name="image_desc">image of card(s)</string>
    <string name="appSlashName">Card Game Engine</string>
    <string name="american8">American 8</string>
    <string name="djambo">Djambo</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="singleplayer">Single Player</string>
    <string name="instructions">Instructions</string>
    <string name="nplayers">Number of Players</string>
    <string name="ncards">Number of Cards</string>
    <string name="nrounds">Number of Rounds</string>
    <string name="play">Play</string>
    <string name="radio_button1">1</string>
    <string name="radio_button2">2</string>
    <string name="dumb">Dumb</string>
    <string name="ai">Artificial Intelligence</string>
    <string name="level">Level</string>
    <string name="newgame">New Game</string>
</resources>
