<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible" >

        <!-- sign-in button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/welcome_to_our_skeleton_app_"
            android:textAppearance="@style/GuessWordText" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content" >
        </com.google.android.gms.common.SignInButton>
        <Button
            android:id="@+id/offline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play Offline"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/textView2"
        android:visibility="gone">


        <Button
            android:id="@+id/commandSpades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSpadesClicked"
            android:text="@string/spades"
            android:textAppearance="@style/HelpText.Heading"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/commandHearts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeartsClicked"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/hearts"
            android:textAppearance="@style/HelpText.Heading"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/commandClubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClubsClicked"
            android:text="@string/clubs"
            android:textAppearance="@style/HelpText.Heading"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/commandDiamonds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDiamondsClicked"
            android:text="@string/diamonds"
            android:textAppearance="@style/HelpText.Heading"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/gameplay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        tools:context=".SkeletonActivity"
        android:layout_below="@+id/login_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/currentCard"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:src="@drawable/back"
            android:contentDescription="@string/image_desc"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignStart="@+id/textView1" />


        <ImageView
            android:id="@+id/pileDeck"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:src="@drawable/back"
            android:contentDescription="@string/image_desc"
            android:layout_marginRight="55dp"
            android:layout_marginEnd="55dp"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/horizontalScrollView1"
            android:layout_alignEnd="@+id/horizontalScrollView1" />


        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/linearLayout"
            android:layout_below="@+id/textView1">

            <Button
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onFinishClicked"
                android:text="@string/finish"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/matchup_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".SkeletonActivity" >

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".SkeletonActivity"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:text=""
                android:textAppearance="@style/HelpText.Caption" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

            <Button
                android:id="@+id/startMatchButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onStartMatchClicked"
                android:text="@string/start_match" />

            <Button
                android:id="@+id/checkGamesButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckGamesClicked"
                android:text="@string/check_games" />

            <Button
                android:id="@+id/quickMatchButon"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onQuickMatchClicked"
                android:text="@string/quick_match" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>