<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/gameplay_layout"
        android:background="@drawable/bg_a8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ScrollView
            android:id="@+id/infoScrollView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/infoscreen"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/gameInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/game_info"
                    android:textColor="#FFFFFF"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </ScrollView>
        <ImageView
            android:id="@+id/currentCard"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:src="@drawable/back"
            android:layout_below="@+id/infoScrollView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/image_desc" />


        <ImageView
            android:id="@+id/pileDeck"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:src="@drawable/back"
            android:layout_below="@+id/infoScrollView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginRight="60dp"
            android:contentDescription="@string/image_desc" />


        <HorizontalScrollView
            android:id="@+id/handScrollView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/handLayout"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/command_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:background="#FFFFFF"
        android:layout_marginTop="200dp">
        <TextView
            android:id="@+id/commandGreeting"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/commandOptions"
            android:layout_below="@+id/commandGreeting"
            android:visibility="visible">

            <Button
                android:id="@+id/commandSpades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSpadesClicked"
                android:text="@string/spades"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/commandHearts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onHeartsClicked"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/hearts"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/commandClubs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClubsClicked"
                android:text="@string/clubs"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/commandDiamonds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDiamondsClicked"
                android:text="@string/diamonds"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/parameters_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginTop="100dp"
        android:nestedScrollingEnabled="false"
        android:onClick="onPlayClicked"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newgame"
            android:id="@+id/text_panel" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_panel"
            android:text="@string/nplayers"
            android:id="@+id/text_nplayers" />
        <Spinner
            android:id="@+id/spinner_nplayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/nplayers"
            android:entries="@array/array_nplayers"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button"
            android:layout_toRightOf="@+id/button" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_nplayers"
            android:text="@string/ncards"
            android:id="@+id/text_ncards" />
        <Spinner
            android:id="@+id/spinner_ncards"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_nplayers"
            android:layout_toEndOf="@+id/text_ncards"
            android:prompt="@string/ncards"
            android:entries="@array/array_ncards"
            android:layout_alignLeft="@+id/spinner_nplayers"
            android:layout_alignStart="@+id/spinner_nplayers" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_ncards"
            android:text="@string/level"
            android:id="@+id/text_level" />
        <RadioGroup
            android:id="@+id/radio_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="Level"
            android:checkedButton="@+id/radio_button1"
            android:layout_below="@+id/text_level"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dumb"
                />
            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Artificial Intelligence"

                />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:layout_below="@+id/radio_level"
            android:layout_centerHorizontal="true"
            android:id="@+id/button"
            android:onClick="onPlayClicked"
            android:outlineProvider="none" />

        <!--android:onClick="onPlayClicked"
        />-->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/instructions"
        android:background="@drawable/bg_instructions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >
        <ScrollView
            android:id="@+id/instructionsScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/instructionsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/instructionsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_a8"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="42dp">
                </TextView>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>>
    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
</RelativeLayout>